<resources>
    <string name="app_name">Side Project 2019</string>
    <string name="e_mail">e-mail</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="pr_nom">prénom</string>
    <string name="nom">nom</string>
    <string name="submit">Submit</string>
    <string name="adress">Adress :</string>
    <string name="search_adress">Search Adress</string>
</resources>
